feat: support checks yaml as input